--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=fd483fa6c1aceb0cc2bcea10d74f6ddc
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:000000@127.0.0.1:3306/specialtop
+DATABASE_URL=mysql://root:AmxAmeXoTa8uxp@127.0.0.1:3306/specialtop
 #DATABASE_URL=mysql://lVbTeCQ6vh:ihJdMdDeMN@remotemysql.com/lVbTeCQ6vh
 #DATABASE_URL=mysql://unaux_24796727:fck86muc@sql212.unaux.com/unaux_24796727_maindb
 ###< doctrine/doctrine-bundle ###
@@ -36,3 +36,19 @@ DATABASE_URL=mysql://root:000000@127.0.0.1:3306/specialtop
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+# SENDGRID_KEY=
+# MAILER_DSN=smtp://$SENDGRID_KEY@sendgrid
+###< symfony/sendgrid-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# GMAIL_USERNAME=
+# GMAIL_PASSWORD=
+# MAILER_DSN=smtp://$GMAIL_USERNAME:$GMAIL_PASSWORD@gmail
+###< symfony/google-mailer ###
